[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pytest = "^7.2.0"
jupyter = "^1.0.0"
pandas = "^1.5.1"
requests-cache = "^0.9.7"
[tool.poetry.dev-dependencies]
pandas = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
